@@ -1,5 +1,6 @@
 06/13/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.0.1.3 'Severard':
+	- Redis DB connection status fixed (Issue 129).
 	- Logfile reset on SIGHUP
 	(Gustavo Garcia suggestion).
 	- Log reset CLi command.
